[project]
name = "fast_reid"
version = "1.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "torch>=2.4.0",
   "torchvision>=0.19.0",
   "yacs>=0.1.8",
   "scikit-learn>=1.5.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
